mise en place texte vert

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -172,11 +172,12 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 \paragraph{Gestionnaire de marque-pages}
 	\begin{enumerate}
 		\item Le programme devrait proposer un gestionnaire de marque-pages de serveur.
-		\item Le programme devrait afficher un bouton "Bookmarks".\textcolor{green}{Où est positionné le bouton?}
-		\item Cliquer sur le bouton "Bookmarks" devrait afficher la liste des marques-pages de l'utilisateur.\textcolor{green}{Où la liste des marques-pages est affiché dans quoi ?}
-		\item Un marque-page doit se composer obligatoirement d'un nom, de l'adresse du serveur, de l'identifiant de l'utilisateur.\textcolor{green}{exemple de syntaxe ?}
+		\item Le programme devrait afficher un menu déroulant "Bookmarks" dans la barre des menus.
+		\item Le menu déroulant "Bookmarks" devrait proposer un bouton "Afficher les marques-pages".
+		\item Cliquer sur le bouton "Afficher les marques-pages" devrait afficher la liste des marques-pages de l'utilisateur dans une nouvelle page.
+		\item Un marque-page doit se composer obligatoirement d'un nom, de l'adresse du serveur, de l'identifiant de l'utilisateur.\textcolor{green}{exemple de syntaxe ?} \textcolor{red}{J'AI PAS ENVIE}
 		\item Un marque-page doit avoir la possibilité d'enregistrer aussi le mot de passe de l'utilisateur si ce dernier le veut.
-		\item Le programme devrait afficher un bouton "Mettre un marque-page".\textcolor{green}{Où est positionné ce bouton ?}
+		\item Le menu déroulant "Bookmarks" devrait proposer un bouton "Mettre un marque-page".
 		\item Cliquer sur le bouton "Mettre un marque-page" devrait afficher un champ de saisie et une case à cocher.
 		\item Le champ de saisie devrait permettre à l'utilisateur d'enter le nom du marque-page.
 		\item La case à cocher devrait permettre à l'utilisateur de choisir si il veut enregistre son mot de passe ou non.
@@ -184,8 +185,9 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	
 \paragraph{Limitations}
 	\begin{enumerate}
+		\item Le programme doit proposer un menu déroulant "Configuration" dans la barre des menus.
 		\item Le programme doit permettre à l'utilisateur de limiter la vitesse de téléchargement des fichiers.
-		\item Pour cela le menu déroulant "Configuration" doit proposer un bouton "Limiter vitesse de téléchargement".\textcolor{green}{Où est ce menu déroulant sur l'interface graphique?}
+		\item Pour cela le menu déroulant "Configuration" doit proposer un bouton "Limiter vitesse de téléchargement".
 		\item Le programme doit permettre à l'utilisateur de donner une valeur précise à la limite de téléchargement.
 		\item Cliquer sur le bouton "Limiter vitesse de téléchargement" doit faire apparaitre un curseur permettant de donner la valeur de la limite.
 		\item Le programme doit permettre à l'utilisateur de limiter la vitesse de téléversement des fichiers.
@@ -202,7 +204,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	
 \paragraph{Utilisation des dossiers}
 	\begin{enumerate}
-		\item Le programme doit afficher l'arborescence des dossiers auquel l'utilisateur a accès sur le serveur courant.\textcolor{green}{Où est-ce qu'il affiche cette arborescence ? dans une fenêtre à part ? sur la même fenêtre dans une partie à gauche ? dans ton *** ?}
+		\item Le programme doit afficher, dans la partie droite de la page principale, l'arborescence des dossiers auquel l'utilisateur a accès sur le serveur courant.
 		\item Le programme doit permettre à l'utilisateur de parcourir tous les sous-dossiers du répertoire qui lui a été fournit.
 		\item Cliquer sur un dossier de l'arborescence doit afficher les sous-dossiers et fichiers de ce dossier.
 		\item Le programme doit permettre à l'utilisateur de créer autant de sous-dossier qu'il veut dans le répertoire qui lui a été fourni.
@@ -443,6 +445,7 @@ Si le client a été auparavant banni par le serveur.
 	
 \paragraph{Limitations}
 	\begin{enumerate}
+		\item Le programme doit proposer un menu déroulant "Configuration" dans la barre des menus.
 		\item Le programme doit permettre à l'administrateur de limiter la vitesse de téléchargement des fichiers par les utilisateurs. 
 		\item Pour cela le menu déroulant "Configuration" doit proposer un bouton "Limiter vitesse de téléchargement". 
 		\item Le programme doit permettre à l'administrateur de donner une valeur précise à la limite de téléchargement. 
