--- a/Rapport_reunion/Rapport_reunion_5.tex
+++ b/Rapport_reunion/Rapport_reunion_5.tex
@@ -52,9 +52,8 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 \subsection*{Décisions de la réunion}
 	\begin{itemize}
 		\item Nous avons commencé le diagramme de cas d'utilisation, cependant celui ci à été repoussé au soir.
-		\item Nous utiliserons l'outil \url{http://genmymodel.com} associé à github pour réalisé le diagramme de cas d'utilisation et hypothétiquement les prochains diagrammes.
-		\item Nous utiliserons genmymodel, logiciel proposé par Reynaud Nicolas.
-		\item Kévin Bascol et Reynaud Nicolas doivent augmenté la priorité donné au cahier des tests.
+		\item Nous utiliserons l'outil \url{http://genmymodel.com} associé à github pour réaliser le diagramme de cas d'utilisation et hypothétiquement les prochains diagrammes, logiciel proposé par Reynaud Nicolas.
+		\item Kévin Bascol et Reynaud Nicolas doivent augmenter la priorité donnée au cahier des tests.
 	\end{itemize}
 	
 \subsection*{Prochaine réunion: 11 novembre 2014}
@@ -63,7 +62,7 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 \subsection*{Remarque}
 \begin{itemize}
 	\item Utilisation du site collaboratif \url{http://genmymodel.com} dans le but de réfléchir au diagramme de cas d'utilisation ensemble. Le site a été choisi pour sa simplicité d'utilisation et sa facilité d'accès.
-	\item Pour des raisons de disponibilité des membres, la réunion a été reportée du 04 Novembre matin, au 04 Novembre midi.
+	\item Nicolas Reynaud ayant été bloqué le matin sur l'autoroute à la suite de l'accident d'un camion. La réunion à été reportée du 04 Novembre matin, au 04 Novembre midi.
 \end{itemize}
 
 
