modif rapport 5 + modifs exigences

--- a/Rapport_reunion/Rapport_reunion_5.tex
+++ b/Rapport_reunion/Rapport_reunion_5.tex
@@ -37,14 +37,13 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 \subsection*{Ordre du jour}
 	\begin{itemize}
 		\item Réflexion sur le diagramme de cas d'utilisation.
-		\item Structure du document de conception général.
 		\item Évaluation de l'état d'avancement du document des spécifications des exigences.
 		\item Évaluation de l'état d'avancement du cahier des tests de recettes.
 	\end{itemize}
 
 \subsection*{Bilan du travail}
 	\begin{itemize}
-		\item Chaque membre à terminé sa partie dans le document de spécifications des exigences en ajoutant l'interface graphique associé.
+		\item Chaque membre à terminé sa partie dans le document de spécifications des exigences en ajoutant l'interface graphique associée.
 		\item Réalisation du diagramme d'utilisation à l'aide de genmymodel.
 		\item A l'heure actuel Kévin Bascol et Nicolas Reynaud accusent un retard sur le cahier des tests.
 	\end{itemize}
@@ -52,17 +51,22 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 \subsection*{Décisions de la réunion}
 	\begin{itemize}
 		\item Nous avons commencé le diagramme de cas d'utilisation, cependant celui ci à été repoussé au soir.
-		\item Nous utiliserons l'outil \url{http://genmymodel.com} associé à github pour réaliser le diagramme de cas d'utilisation et hypothétiquement les prochains diagrammes, logiciel proposé par Reynaud Nicolas.
+		\item Nous utiliserons l'outil \url{http://genmymodel.com} associé à github pour réaliser le diagramme de cas d'utilisation et hypothétiquement les prochains diagrammes, site proposé par Reynaud Nicolas.
 		\item Kévin Bascol et Reynaud Nicolas doivent augmenter la priorité donnée au cahier des tests.
 	\end{itemize}
 	
 \subsection*{Prochaine réunion: 11 novembre 2014}
-	\textbf{Ordre du jour:} Décider quels seront les UML à faire.
+	\textbf{Ordre du jour:} 
+	\begin{itemize}
+		\item Décider quels seront les UML à faire.
+		\item Structure du document de conception générale.
+	\end{itemize}
 	
 \subsection*{Remarque}
 \begin{itemize}
 	\item Utilisation du site collaboratif \url{http://genmymodel.com} dans le but de réfléchir au diagramme de cas d'utilisation ensemble. Le site a été choisi pour sa simplicité d'utilisation et sa facilité d'accès.
-	\item Nicolas Reynaud ayant été bloqué le matin sur l'autoroute à la suite de l'accident d'un camion. La réunion à été reportée du 04 Novembre matin, au 04 Novembre midi.
+	\item Nicolas Reynaud ayant été bloqué le matin sur l'autoroute à la suite de l'accident d'un camion, la réunion a été reportée du 04 Novembre matin, au 04 Novembre midi.
+	\item Contrairement à ce qui avait été prévu l'étude de la structure du document de conception général a été remplacée pour pallier au retard du document des exigences.
 \end{itemize}
 
 
