--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -107,8 +107,6 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 
 Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Il pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.
 
-\subsection{Perspectives du produit}
-
 \subsection{Fonctions du produit}
 \begin{enumerate}
 \item Permet de partager des dossiers entre un serveur et un ou plusieurs utilisateurs.
@@ -119,9 +117,6 @@ Ce projet consiste en la création d'un serveur FTP chez un particulier ou une e
 \subsection{Caractéristiques des utilisateurs}
 Les utilisateurs de notre programme peuvent être des professionnels aguerris comme des utilisateurs néophytes. Il nous faudra donc proposer un programme sûr pour les entreprises mais aussi simple d'utilisation pour le particuliers.
 
-\subsection{Contraintes}
-
-\subsection{Exigences reportées}
 
 \section{Exigences spécifiques}
 
@@ -163,8 +158,10 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Le programme doit vérifier que le nom d'utilisateur n'a pas moins de 3 caractères.
 		\item Le programme doit vérifier que le mot de passe comporte plus de 3 caractères.
 		\item Le programme doit vérifier que le mot de passe comporte moins de 50 caractères.
-		\subitem Exemple avec la phrase suivante en cas de mauvais mot de passe "Erreur de mot de passe".
-		\subitem Exemple en cas de pseudo non reconnu "L'utilisateur entré est invalide".
+		\begin{enumerate}
+			\item Exemple avec la phrase suivante en cas de mauvais mot de passe "Erreur de mot de passe".
+			\item Exemple en cas de pseudo non reconnu "L'utilisateur entré est invalide".
+		\end{enumerate}
 		\item Le programme doit permettre l'auto-connexion au démarrage du programme pour ce faire l'utilisateur pourra cocher une case.
 	
 	\end{enumerate}
@@ -214,15 +211,24 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Ce champ de saisie doit permettre à l'utilisateur d'entrer le nom du sous-dossier.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel sous-dossier du répertoire qui lui a été fourni.
 		\item Le menu de gestion de dossier doit proposer un bouton "Supprimer le dossier".
-		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.\textcolor{green}{description de la boite ? bouton oui/non ?}
-		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.\textcolor{green}{ si le répertoire fourni n'existe pas ?}
+		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de dossier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
+		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.\textcolor{green}{ si le répertoire fourni n'existe pas ?} \textcolor{red}{bah à ce moment là il n'a juste pas accès au serveur :3}
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'utilisateur a fait un clic droit.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel fichier dans les sous-dossiers du répertoire qui lui a été fourni.
 		\item Faire un clic droit sur un fichier doit afficher un menu de gestion de fichier.
 		\item Le menu de gestion de fichier doit proposer un bouton "Supprimer le fichier".
 		\item Cliquer sur le bouton "Supprimer le fichier" doit afficher une boite de dialogue.
-		\item Le programme doit supprimer le fichier si l'administrateur confirme la boite de dialogue.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de fichier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 	\end{enumerate}
 	
 \paragraph{Communication réseau}
@@ -243,7 +249,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\begin{enumerate}
 			\item Le client doit prévenir l'utilisateur s'il ne parvient pas à établir une connexion avec le serveur sur le \textbf{port 21} à l'aide d'une fenêtre de dialogue affichant les messages suivant : 
 
-			\begin{enumerate}
+			\begin{enumerate}[label=\arabic*.]
 				\item \textit{"Impossible d'établir une connexion avec le serveur $\textless nom\_du\_serveur\textgreater$:\\
 -Vérifiez l'état de votre connexion Internet.\\
 -Vérifiez que le nom du serveur n'est pas erroné."\\}
@@ -296,7 +302,7 @@ Si le client a été auparavant banni par le serveur.
 
 			\item Le module de statistique doit afficher un rapport en temps réel contenant: 
 
-			\begin{enumerate}
+			\begin{enumerate}[label=\arabic*.]
 				\item Le fichier le plus télécharger.
 
 				\item L'utilisateur qui "download" le plus ses fichiers.
@@ -305,7 +311,7 @@ Si le client a été auparavant banni par le serveur.
 			\end{enumerate} 
 		\end{enumerate}
 
-	\subparagraph{Interface graphique du client}
+	\subparagraph{Interface graphique du client \textcolor{red}{en meme temps t'es dans la partie client}}
 		\begin{enumerate}
 
 			\item La fenêtre doit contenir deux parties : une partie contenant les informations textuelles, et une partie graphique contenant l'histogramme.
@@ -480,6 +486,11 @@ Si le client a été auparavant banni par le serveur.
 		\item Le programme doit permettre à l'administrateur de supprimer n'importe quel dossier sur le serveur.
 		\item Le menu de gestion de dossier doit proposer un bouton "Supprimer le dossier".
 		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de dialogue demandant la confirmation de la suppression.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de dossier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 		\item Le programme doit permettre à l'administrateur de créer des fichiers dans n'importe quel dossier sur le serveur.
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'administrateur a fait un clic droit.
@@ -487,7 +498,11 @@ Si le client a été auparavant banni par le serveur.
 		\item Faire un clic droit sur un fichier doit afficher un menu de gestion de fichier
 		\item Le menu de gestion de fichier doit proposer un bouton "Supprimer le fichier".
 		\item Cliquer sur le bouton "Supprimer le fichier" doit afficher une boite de dialogue.
-		\item Le programme doit supprimer le fichier si l'administrateur confirme la boite de dialogue.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de fichier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 	\end{enumerate}	
 \paragraph{Communication réseau}
 
@@ -529,7 +544,7 @@ Si le client a été auparavant banni par le serveur.
 
 			\item Le module de statistique doit pouvoir afficher en temps réel en plus d'éditer un rapport toute les 2 semaines contenant les statistiques suivante:
 
-			\begin{enumerate}
+			\begin{enumerate}[label=\arabic*.]
 				\item le fichier le plus télécharger.
 
 				\item l'utilisateur qui "upload" le plus de fichiers.
@@ -670,7 +685,7 @@ Un fichier d'historique des événements, appelé aussi fichier "log", permettra
 		\item Avant de télécharger un fichier crypté dont la clé de cryptage n'est pas enregistrée, le programme devrait afficher un champ de saisie.
 		\item Ce champ de saisie devrait permettre à l'utilisateur d'entrer la clé de cryptage.
 		\item Lors de l'envoie de la clé de cryptage, le programme devrait enregistrer celle-ci.
-		\item \textcolor{blue}{Le programme devrait permettre de communiquer les clés de cryptage entre utilisateurs et administrateur.}
+		\item \textcolor{red}{Le programme devrait permettre de communiquer les clés de cryptage entre utilisateurs et administrateur.}
 		\item Le programme doit crypter les mots de passe des utilisateurs
 	\end{enumerate}
 	
