Ajout des delais pour mes parties

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -805,13 +805,23 @@ Une documentation utilisateur complète doit être fournie avec le programme.
 	\hline
 	{\large \textbf{Fonctionnalité}} & {\large \textbf{Type}}\\
 	\hline
+	Création de compte & Essentielle\\
+	\hline
+	Authentification & Essentielle\\
+	\hline
+	Partage de fichier & Essentielle \\
+	\hline
 	Utilisation des dossiers & Essentielle\\
 	\hline
 	Limitations & Souhaitable\\
 	\hline
+	Bannissement de compte & Souhaitable \\
+	\hline
 	Gestionnaire de marque-pages & Souhaitable\\
 	\hline
 	Cryptage & Optionnelle\\
+	\hline
+	Compte temporaire & Optionnelle \\
 	\hline
 \end{tabular}
 \egroup
